United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7145537 minor tweaks to LogEvents
7145537 : minor tweaks to LogEvents

Details
Type:
Bug
Submit Date:
2012-02-14
Status:
Closed
Updated Date:
2012-03-24
Project Name:
JDK
Resolved Date:
2012-03-24
Component:
hotspot
OS:
solaris_10
Sub-Component:
runtime
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
A few minor fixes should be made to the LogEvents output.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/09d00c18e323
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/09d00c18e323
                                     
2012-02-18
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/09d00c18e323
                                     
2012-02-16
EVALUATION

7145537: minor tweaks to LogEvents
Reviewed-by: kvn, twisti

A few minor fixes and corrections to the LogEvents output.  Add the
compile id and osr flag to the nmethod logging.  Switch all the times
to the seconds since JVM start and print in standard %.3f format.
Override PrintHeapAtGCExtended when logging the heap.  Move
Events::print to the cpp to ease invoking it from the debugger.  I
also restored the extern "C" events() function to use when the
debugger is being difficult about invoking C++ methods.  I also
expanded the logging of implicit exceptions to record more cases.  I
considered removing the generate implicit exception logging since
that's not as rare as the others.  Tested with crashing the JVM.
                                     
2012-02-16



Hardware and Software, Engineered to Work Together