7145537: minor tweaks to LogEvents

Reviewed-by: kvn, twisti